--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,22 @@
 <resources>
-    <string name="app_name">rm-android-template</string>
+    <string name="app_name">RM-CFV</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="cliente_nome">Nome Completo</string>
+    <string name="cliente_telefone">Telefone de contato</string>
+    <string name="cliente_email">E-mail</string>
+    <string name="cliente_dataNascimento">Data de Nascimento</string>
+    <string name="cliente_CPF">CPF</string>
+    <string name="cliente_sessao_endereco">Endereço</string>
+    <string name="cliente_sessao_dados_pessoais">Dados Pessoais</string>
+    <string name="cliente_logradouro">Logradouro</string>
+    <string name="cliente_numero">Número</string>
+    <string name="cliente_complemento">Complemento</string>
+    <string name="cliente_bairro">Bairro</string>
+    <string name="cliente_uf">Estado</string>
+    <string name="cliente_cidade">Cidade</string>
 </resources>
