Cadastro de departamento

--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="cliente_logradouro">Logradouro</string>
+    <string name="nome_do_departamento">Nome do departamento</string>
 </resources>
