Movimentação de estoque

--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="cliente_logradouro">Logradouro</string>
     <string name="nome_do_departamento">Nome do departamento</string>
+    <string name="listar_produtos_title">Listar Produtos</string>
+    <string name="mensagem_campo_requerido">Este campo deve ser preenchido.</string>
+    <string name="tipo_de_movimentacao">Tipo de Movimentação</string>
 </resources>
