Search e Remover das demais telas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
     <string name="menu_produtos">Produtos</string>
     <string name="menu_estoque">Estoque</string>
     <string name="label_adicionar_departamento">Adicionar Departamento</string>
+    <string name="label_total_devedor">Saldo devedor</string>
 </resources>
