Novos icones menu lateral, permitir obter foto da galeria

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,9 +98,11 @@
     <string name="menu_clientes">Clientes</string>
     <string name="menu_fornecedores">Fornecedores</string>
     <string name="menu_balancete">Balancete</string>
-    <string name="menu_categorias">categorias</string>
+    <string name="menu_categorias">Categorias</string>
     <string name="menu_produtos">Produtos</string>
     <string name="menu_estoque">Estoque</string>
     <string name="label_adicionar_departamento">Adicionar Departamento</string>
     <string name="label_total_devedor">Saldo devedor</string>
+    <string name="mensagem_error_departamento_criacao">Erro ao criar categoria!</string>
+    <string name="mensagem_criado_sucesso">Criado com sucesso!</string>
 </resources>
