--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,5 @@
     <string name="texto_dashboard_sem_vendas">As informações referentes as suas vendas, aparecem aqui. Você ainda não efetuou nenhuma venda, clique no botão \"+\" no canto inferior direito para registrar uma nova venda.</string>
     <string name="texto_dashboard_sem_produtos">Você não cadastrou nenhum produto ainda.</string>
     <string name="ir_produtos">produtos</string>
+    <string name="dashboard_exit_message">Deseja realmente sair do aplicativo?</string>
 </resources>
